--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,12 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "api/createOrder.js", "use": "@vercel/node" }
   ],
   "routes": [
     {
       "src": "/api/createOrder",
-      "methods": ["POST", "OPTIONS"],
-      "dest": "index.js"
-    },
-    {
-      "src": "/",
-      "methods": ["GET"],
-      "dest": "index.js"
+      "dest": "/api/createOrder.js"
     }
   ]
 }
