--- a/package.json
+++ b/package.json
@@ -1,18 +1,9 @@
 {
   "name": "razorpay-backend",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
     "razorpay": "^2.9.6"
-  },
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "description": ""
+  }
 }
